# bitboard-pwa-wallet

./: .env.contacts  .env.contacts.example  .env.imprint.example  .env.legal-notice.de  .env.legal-notice.de.example  .env.legal-notice.en  .env.legal-notice.en.example  .env.regtest  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TESTING.md  deny.toml  lcov.info  lefthook.yml  load-imprint-env.mjs  load-vite-env.mjs
.cursor/architecture/plans/: ldk_lightning_node_roadmap_bf8b0eb6.plan.md  multi-provider-esplora-sharding_4e4f0ff4.plan.md  remediation_roadmap_structure_2fb08226.plan.md  two_week_remediation_roadmap_4e11cfd8.plan.md
.cursor/architecture/research/: argon2-mobile-performance.md  cursor_bdk_wallet_version_2_x_api_docum.md  cursor_testing_strategies_for_rust_wasm.md  taproot-base58-investigation.md
.cursor/rules/: coding-codex.mdc  testing-strategy.mdc  wasm-rebuild-workflow.mdc
.github/actions/strip-vercel-project-root-directory/: action.yml  strip-root-directory.js
.github/workflows/: audit.yml  deploy-vercel-landing.yml  deploy-vercel-preview.yml  deploy-vercel.yml  general.yml
bitboard-ark/: Cargo.toml
bitboard-ark/src/: api_types.rs  balance_display.rs  cached_operator_info.rs  constants.rs  error.rs  esplora_blockchain.rs  exit_balance.rs  lib.rs  network.rs  offchain_snapshot.rs  operator_config_diff.rs  persistence.rs  persistence_tests.rs  receive_address_tests.rs  session.rs  session_boarding_utxo_tests.rs  session_exit_candidate_tests.rs  session_mapper_tests.rs  session_unilateral_exit_regtest_tests.rs  signer_migration.rs  unilateral_exit_materials.rs  wasm_sleep.rs
bitboard-ark/src/session/: autonomous.rs  balance.rs  boarding.rs  exit.rs  exit_autonomous.rs  exit_materials_prefetch.rs  exit_onchain.rs  exit_watch.rs  exit_watch_reconcile.rs  mappers.rs  mod.rs  offchain_balance.rs  open.rs  operator_schedule.rs  operator_trust.rs  payments.rs  pending_exit.rs  receive.rs  signer_migration.rs  sync.rs  vtxo.rs
bitboard-ark/tests/: ark_rest_query_encoding_regression.rs  autonomous_unilateral_exit_session_regtest.rs  pending_recovery_balance_regression.rs  pending_recovery_due_to_expired_signer_balance_regression.rs  signer_migration_session_regtest.rs  unilateral_exit_session_regtest.rs
bitboard-ark/tests/support/: mod.rs  regtest_integration.rs
bitboard-encryption/: Cargo.toml
bitboard-encryption/src/: lib.rs  wallet_backup.rs
bitboard-lightning/: Cargo.toml
bitboard-lightning/src/: lib.rs
bitboard-wasm-sleep/: Cargo.toml
bitboard-wasm-sleep/src/: lib.rs
crypto/: Cargo.toml
crypto/docs/: wallet-session-migration.md
crypto/src/: blockchain.rs  descriptors.rs  error.rs  esplora.rs  esplora_tx_anchor_reconcile.rs  lab.rs  lab_entity_wallet.rs  lab_psbt.rs  lib.rs  mnemonic.rs  regtest.rs  sync.rs  tests.rs  transaction.rs  types.rs  validation.rs  wallet.rs  wallet_session.rs  wasm_sleep.rs
crypto/tests/: descriptor_tests.rs  esplora_tests.rs  esplora_tx_anchor_reconcile_tests.rs  lab_entity_wallet_tests.rs  lab_tests.rs  mnemonic_tests.rs  transaction_tests.rs  wallet_session_tests.rs  wallet_tests.rs  wallet_utxo_tests.rs  wasm_boundary_tests.rs
crypto/tests/common/: esplora_mocks.rs  mod.rs  wallet_fixtures.rs
doc/: ARCHITECTURE.md  SECURITY.md
doc/features/: arkade-regtest-contract.yaml  arkade.yaml  dashboard-arkade-contract.yaml  infomode.yaml  lab.yaml  periodic-sync.yaml  wallet-lifecycle.yaml  wallet.yaml
docker/: arkade-regtest.override.yml
docs/: arkade-bitboard-wallet-model.md  deploy-vercel.md  descriptor-wallet-switching.md  esplora-bdk-anchor-reconcile.md  lightning-bitboard-wallet-model.md  onchain-bitboard-wallet-model.md  vercel-api-functions.md  wallet-rail-lifecycle.md
docs/deploy/: fulmine-delegator-vps.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.global-setup.ts  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vercel.json  vite.config.ts
frontend/api/: test-import.ts  test.ts
frontend/api/_lib/: fiat-rates-proxy-cors.ts  passthrough-upstream-response.ts
frontend/api/esplora/: [...path].ts
frontend/api/faucet/: [...path].ts
frontend/api/fiat-rates/: [...path].ts
frontend/api/lnurl/: [...path].ts
frontend/common/: bitboard-wallet-version.ts  public-links.ts
frontend/common/legal/: LegalHubSections.tsx  LegalNoticeDe.tsx  LegalNoticeEn.tsx  LegalNoticeEntityBlock.tsx  legal-notice-availability.ts
frontend/common/privacy/: PrivacyPolicyDe.tsx  PrivacyPolicyEn.tsx  PrivacyPolicyLayout.tsx  index.ts  privacy-language-notes.ts  surface.tsx
frontend/coverage/: clover.xml  coverage-final.json  encryption.ts.html  index.html  migrations.ts.html  test-helpers.ts.html  wallet-persistence.ts.html
frontend/coverage/lcov-report/: index.html
frontend/coverage/src/: index.html  main.tsx.html
frontend/docs/: FRONTEND_STRUCTURE.md  NAMING.md
frontend/scripts/: e2e-dev-server.mjs  probe-katex-runtime.mjs  probe-katex.mjs  vercel-install-wasm-toolchain.sh
frontend/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/__tests__/: wasm-smoke.test.ts
frontend/src/components/: AppModal.tsx  (+48 more)
frontend/vercel-proxy-shared/: fiat-rates-cors.ts
landing-page/: .gitignore  README.md  index.html  install.html  metadata.json  package-lock.json  package.json  privacy.html  tsconfig.json  vercel.json  vite.config.ts
landing-page/components/: MatrixBackground.tsx  RetroMarquee.tsx  Section.tsx
landing-page/src/: App.tsx  GitHubMark.tsx  index.css  install-main.tsx  landing-page-links.ts  privacy-main.tsx  vite-env.d.ts
scripts/: arkade-regtest-health.mjs  clean-arkade-regtest.sh  coverage-reminder.sh  pr2-lib-domain-restructure.mjs  refresh-coverage.sh  start-arkade-regtest.sh  start-regtest.sh  stop-arkade-regtest.sh  sync-version.mjs  verify-arkade-regtest-bitboard-patches.sh  verify-version.mjs  version-lib.mjs  wait-arkade-regtest-health.sh
scripts/patches/: arkade-regtest-bitboard.patch
test-results/: .last-run.json
(+1204 files in other folders)
