[workspace.package]
version = "0.3.2"

[workspace]
members = [
    "crypto",
    "bitboard-encryption",
    "bitboard-lightning",
    "bitboard-ark",
    "bitboard-wasm-sleep",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# esplora-client ignores Builder::timeout on wasm32; we need it for PWA Esplora sync (see third_party patch).
[patch.crates-io]
esplora-client = { path = "third_party/esplora-client" }
ark-client = { path = "third_party/ark-client" }
ark-rest = { path = "third_party/ark-rest" }
ark-bdk-wallet = { path = "third_party/ark-bdk-wallet" }
