[package]
name = "bitboard-ark"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2"
hex = "0.4"
rand = "0.8"
bip39 = "2"
bitcoin = { version = "0.32", default-features = false, features = ["std", "rand", "serde"] }
ark-core = "0.9.2"
ark-bdk-wallet = { path = "../third_party/ark-bdk-wallet" }
ark-delegator = "0.9.2"
async-trait = "0.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.esplora-client]
version = "0.12"
default-features = false
features = ["async", "async-https", "tokio"]

[target.'cfg(target_arch = "wasm32")'.dependencies.esplora-client]
version = "0.12"
default-features = false
features = ["async", "async-https"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ark-client]
version = "0.9.2"
default-features = false
features = ["tls-native-roots"]

[target.'cfg(target_arch = "wasm32")'.dependencies.ark-client]
version = "0.9.2"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies.gloo-timers]
version = "0.3.0"
features = ["futures"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
