[package]
name = "bitboard-encryption"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
# crates.io has no ml-dsa 0.1.0 GA yet; RustCrypto publishes 0.1.0-rc.* only until then.
ml-dsa = "0.1.0-rc.8"
sha2 = { version = "0.10", default-features = false }
wasm-bindgen = "0.2"
zeroize = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
