[package]
name = "bitboard-crypto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
async-trait = "0.1"
thiserror = "2"
bdk_wallet = "2.3"
bitcoin = { version = "0.32", default-features = false, features = ["secp-lowmemory", "std"] }

[dev-dependencies]
wiremock = "0.6"
mockall = "0.13"
rstest = "0.23"
assert_matches = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
