[package]
name = "bitboard-crypto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
async-trait = "0.1"
thiserror = "2"
bdk_wallet = { version = "2.3", features = ["keys-bip39"] }
bdk_esplora = { version = "0.22", default-features = false, features = ["async"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bitcoin = { version = "0.32", default-features = false, features = ["secp-lowmemory", "std", "rand"] }
argon2 = { version = "0.5", features = ["std"] }
console_error_panic_hook = "0.1"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wiremock = "0.6"
mockall = "0.13"
rstest = "0.23"
assert_matches = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

